1.  pictures border radius (css) changed 2.  text (html) modyfied

--- a/index.html
+++ b/index.html
@@ -71,11 +71,11 @@
                 Po
                 dekadzie pracy na stanowisku instruktor fitness/trener personalny, zostałem koordynatorem jednego z
                 największych
-                klubów treningowych w mieście. Ten awans również nie przeszedł bez eha skandalu. I tutaj szczęście
+                klubów treningowych w mieście. Ten awans również nie przeszedł bez eha skandalu. I tutaj, szczęście
                 wyręczyło
                 rozum. Po 6 latach pracy na menagerskiej pozycji, postanowiłem wreszcie od początku do końca sam na coś
-                zapracować. Zatem kupiłem sobie kurs <strong>frontend developer</strong>. Teraz z, póki co, rosnącym
-                zaangażowaniem zgłębiam tajniki html, css i js. Snuję przy tym śmiałe, dalekosiężne wyobrażenia siebie
+                zapracować. Zatem kupiłem sobie kurs <strong>frontend developer</strong>. Teraz z chimerycznym
+                zaangażowaniem, zgłębiam tajniki html, css i js. Snuję przy tym śmiałe, dalekosiężne wyobrażenia siebie
                 jako
                 cyberwywrotowca, który pokazuje
                 biednym jak mają zabierać bogatym.
@@ -97,7 +97,8 @@
 
             <h2>Pasje</h2>
             <h3>Pisanie</h3>
-            <img class="section__image" width="200" height="200" src="https://i.ibb.co/WgJhkvT/Kochanek-Czarownic.jpg" alt="KochanekCzarownic">
+            <img class="section__image" width="200" height="200" src="https://i.ibb.co/WgJhkvT/Kochanek-Czarownic.jpg"
+                alt="KochanekCzarownic">
             <p>
                 Fragment rozdziału <em>"Pośród Kruków"</em>
             </p>
@@ -133,7 +134,8 @@
                 skowytali niby wilcy, spuszczając z łańcuchów niecierpliwe żądze.
             </p>
             <h3>OCR</h3>
-            <img class="section__image" width="200" height="200" src="https://i.ibb.co/VVt6nnp/runmageddon.jpg" alt="runmageddon">
+            <img class="section__image" width="200" height="200" src="https://i.ibb.co/VVt6nnp/runmageddon.jpg"
+                alt="runmageddon">
             <p>
                 Biegi z przeszkodami w wymagających warunkach terenowych i atmosferycznych
             </p>
@@ -151,7 +153,7 @@
             <div class="section__container">
                 <table class="table">
                     <caption>
-                        <h3 class="table__caption">Moje ulubione postacie z książek, gier i filmów</h3>
+                        <h3 class="table__caption">Postacie z życia, książek, gier i filmów</h3>
                     </caption>
                     <thead>
                         <tr class="table__row">
