history paragraph text changed (html); console welcome text changed (js)

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                 Na świat przyszedłem 9 listopada 1981r. Zodiakalny <b>skorpion</b> na częściach z poprzedniego
                 tysiąclecia.
                 Ukończyłem
-                przedszkole i podstawówkę jak każdy bądź prawie każdy. Po maturze trafiłem do Akademii Wychowania
+                przedszkole i podstawówkę jak każdy bądź prawie każdy. Po maturze, trafiłem do Akademii Wychowania
                 Fizycznego
                 w
                 Krakowie, gdzie w
@@ -71,7 +71,7 @@
                 Po
                 dekadzie pracy na stanowisku instruktor fitness/trener personalny, zostałem koordynatorem jednego z
                 największych
-                klubów treningowych w mieście. Ten awans również nie przeszedł bez eha skandalu. I tutaj, szczęście
+                klubów treningowych w mieście. Ten awans również nie przeszedł bez eha skandalu. I tutaj,  szczęście
                 wyręczyło
                 rozum. Po 6 latach pracy na menagerskiej pozycji, postanowiłem wreszcie od początku do końca sam na coś
                 zapracować. Zatem kupiłem sobie kurs <strong>frontend developer</strong>. Teraz z chimerycznym
