--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 <li class="navigation__listItem">
                     <a class="navigation__link" href="https://www.youtube.com/watch?v=gT6hSz_TxxA" target="_blank"
                         rel="noreferrer noopener" title="Muzyka z gry video Deus Ex">
-                        Posłuchaj dobrej muzyki<span class="navigation__span">(otworzy się w nowej zakładce)</span>
+                        Posłuchaj nastrojowej muzyki<span class="navigation__span">(otworzy się w nowej zakładce)</span>
                     </a>
                 </li>
                 <li class="navigation__listItem">
