table data added

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                 Po
                 dekadzie pracy na stanowisku instruktor fitness/trener personalny, zostałem koordynatorem jednego z
                 największych
-                klubów treningowych w mieście. Ten awans również nie przeszedł bez eha skandalu. I tutaj,  szczęście
+                klubów treningowych w mieście. Ten awans również nie przeszedł bez eha skandalu. I tutaj, szczęście
                 wyręczyło
                 rozum. Po 6 latach pracy na menagerskiej pozycji, postanowiłem wreszcie od początku do końca sam na coś
                 zapracować. Zatem kupiłem sobie kurs <strong>frontend developer</strong>. Teraz z chimerycznym
@@ -184,7 +184,7 @@
                             <th class="table__cell table__header" scope="row"><a class="table__link"
                                     href="https://www.youtube.com/watch?v=NakTu_VZxJ0" target="_blank"
                                     rel="noreferrer noopener">Wednesday Addams</a></th>
-                            <td class="table__cell" rowspan="3">Film</td>
+                            <td class="table__cell">Film</td>
                             <td class="table__cell">Wednesday</td>
                             <td class="table__cell">1 sezon</td>
                         </tr>
@@ -192,6 +192,7 @@
                             <th class="table__cell table__header" scope="row"><a class="table__link"
                                     href="https://www.youtube.com/watch?v=cDpI6Zzy-vo" target="_blank"
                                     rel="noreferrer noopener">Leonidas</a></th>
+                            <td class="table__cell">Film</td>
                             <td class="table__cell">300</td>
                             <td class="table__cell">1 część</td>
                         </tr>
@@ -199,6 +200,7 @@
                             <th class="table__cell table__header" scope="row"><a class="table__link"
                                     href="https://www.youtube.com/watch?v=XeltAGwwsDQ" target="_blank"
                                     rel="noreferrer noopener">Harley Quinn</a></th>
+                            <td class="table__cell">Film</td>
                             <td class="table__cell">Legion samobójców</td>
                             <td class="table__cell">2 części</td>
                         </tr>
