table cell text added

--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
                     </caption>
                     <thead>
                         <tr class="table__row">
-                            <th class="table__cell table__header" scope="col">Postać</th>
+                            <th class="table__cell table__header" scope="col">Postać<span>(linki)</span></th>
                             <th class="table__cell table__header" scope="col">Książka/film/gra</th>
                             <th class="table__cell table__header" scope="col">Tytuł</th>
                             <th class="table__cell table__header" scope="col">Ilość części</th>
