--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     <main>
         <section class="section">
             <h2>Historia</h2>
-            <p>
+            <p class="section__history">
                 Na świat przyszedłem 9 listopada 1981r. Zodiakalny <b>skorpion</b> na częściach z poprzedniego
                 tysiąclecia.
                 Ukończyłem
