--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <section class="section">
         <button class="section__button">Zmień motyw na <span class="section__span">jaśniejszy</span></button>
         <header>
-            <h1>Dane personalne - Daniel</h1>
+            <h1 class="section__header">Dane personalne - Daniel</h1>
             <img class="section__image" width="200" height="200" src="https://i.ibb.co/98RKwYS/portret.jpg"
                 alt="portret">
             <button class="section__button section__portraitRemove">Usuń portret</button>
@@ -57,7 +57,7 @@
 
     <main>
         <section class="section">
-            <h2>Historia</h2>
+            <h2 class="section__header">Historia</h2>
             <p class="section__history">
                 Na świat przyszedłem 9 listopada 1981r. Zodiakalny <b>skorpion</b> na częściach z poprzedniego
                 tysiąclecia.
@@ -97,8 +97,8 @@
             </ul>
 
 
-            <h2>Pasje</h2>
-            <h3>Pisanie</h3>
+            <h2 class="section__header">Pasje</h2>
+            <h3 class="section__header">Pisanie</h3>
             <img class="section__image" width="200" height="200" src="https://i.ibb.co/WgJhkvT/Kochanek-Czarownic.jpg"
                 alt="KochanekCzarownic">
             <p>
@@ -135,14 +135,14 @@
                 furią
                 skowytali niby wilcy, spuszczając z łańcuchów niecierpliwe żądze.
             </p>
-            <h3>OCR</h3>
+            <h3 class="section__header">OCR</h3>
             <img class="section__image" width="200" height="200" src="https://i.ibb.co/VVt6nnp/runmageddon.jpg"
                 alt="runmageddon">
             <p>
                 Biegi z przeszkodami w wymagających warunkach terenowych i atmosferycznych
             </p>
 
-            <h3>Rycerskie turnieje</h3>
+            <h3 class="section__header">Rycerskie turnieje</h3>
             <img class="section__image" width="200" height="200" src="https://i.ibb.co/B24b0vS/rycerz.jpg" alt="rycerz">
             <p>
                 Głównie te rozgrywające się na Xbox. Rynsztunek kompletowany własnym sumptem. Wierzchowiec barowy -
@@ -151,7 +151,7 @@
             </p>
         </section>
         <section class="section">
-            <h3 id="pozostałe-ciekawostki" class="section__header">Pozostałe ciekawostki</h3>
+            <h3 class="section__header" id="pozostałe-ciekawostki" class="section__header">Pozostałe ciekawostki</h3>
             <div class="section__container">
                 <table class="table">
                     <caption>
