--- a/index.html
+++ b/index.html
@@ -24,14 +24,14 @@
         rel="stylesheet">
 </head>
 
-<body class="body">
+<body class="body js-body">
     <section class="section">
-        <button class="section__button">Zmień motyw na <span class="section__span">jaśniejszy</span></button>
+        <button class="section__button js-button">Zmień motyw na <span class="js-span">jaśniejszy</span></button>
         <header>
             <h1 class="section__header">Dane personalne - Daniel</h1>
-            <img class="section__image" width="200" height="200" src="https://i.ibb.co/98RKwYS/portret.jpg"
+            <img class="section__image js-portrait" width="200" height="200" src="https://i.ibb.co/98RKwYS/portret.jpg"
                 alt="portret">
-            <button class="section__button section__portraitRemove">Usuń portret</button>
+            <button class="section__button js-portraitRemove">Usuń portret</button>
         </header>
 
         <nav class="navigation">
