--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
 <body class="body js-body">
     <section class="section">
-        <button class="section__button js-button">Zmień motyw na <span class="js-span">jaśniejszy</span></button>
+        <button class="section__button js-backgroundButton">Zmień motyw na <span class="js-span">jaśniejszy</span></button>
         <header>
             <h1 class="section__header">Dane personalne - Daniel</h1>
             <img class="section__image js-portrait" width="200" height="200" src="https://i.ibb.co/98RKwYS/portret.jpg"
@@ -105,10 +105,10 @@
                 Fragment rozdziału <em>"Pośród Kruków"</em>
             </p>
             <p>
-                <button class="section__button section__button--fragmentRemove">Ukryj
+                <button class="section__button js-fragmentRemove">Ukryj
                     Fragment</button>
             </p>
-            <p class="section__storyFragment">
+            <p class="section__storyFragment js-storyFragment">
                 Stanęli naprzeciw siebie tam, skąd nie wolno wracać między żywych. W oczach mieli dzikość i
                 koszmar.
                 Mówiono o
